@@ -1,3 +1,7 @@
+shmuel 2024-09-21 01:58:53+03:00 - build 849
+
+1. LuaFAR: a fix in makefarkeys.lua.
+
 shmuel 2024-09-01 22:41:48+03:00 - build 848
 
 1. Macrobrowser: refactoring.
